--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "@fortawesome/fontawesome-free/css/all.css";
 
 @custom-variant dark (&:is(.dark *));
 
